@@ -15,15 +15,18 @@ import at.ac.tuwien.sepr.groupphase.backend.repository.user.CustomerRepository;
 import at.ac.tuwien.sepr.groupphase.backend.repository.user.StaffRepository;
 import at.ac.tuwien.sepr.groupphase.backend.repository.user.UserRepository;
 import at.ac.tuwien.sepr.groupphase.backend.repository.RoleRepository;
+import at.ac.tuwien.sepr.groupphase.backend.security.AppUserDetails;
 import at.ac.tuwien.sepr.groupphase.backend.security.JwtTokenizer;
 import at.ac.tuwien.sepr.groupphase.backend.service.UserService;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.jpa.repository.JpaRepository;
+import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.AuthorityUtils;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
@@ -33,6 +36,7 @@ import org.springframework.stereotype.Service;
 import java.lang.invoke.MethodHandles;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -49,6 +53,7 @@ public class CustomUserDetailService implements UserService {
     private final Map<UserType, JpaRepository<? extends ApplicationUser, Long>> repositoryMap;
     private final UserMapper mapper;
     private final  RoleRepository roleRepository;
+    private final PermissionService permissionService;
 
     /**
      * Constructor for EquipmentService. Initializes the service with the necessary repositories and mapper.
@@ -62,7 +67,7 @@ public class CustomUserDetailService implements UserService {
      */
     @Autowired
     public CustomUserDetailService(UserRepository userRepository, PasswordEncoder passwordEncoder, JwtTokenizer jwtTokenizer,  CustomerRepository customerRepository, StaffRepository staffRepository,
-                                   UserMapper mapper, RoleRepository roleRepository, UserServiceValidator validator) {
+                                   UserMapper mapper, RoleRepository roleRepository, UserServiceValidator validator, PermissionService permissionService) {
         this.userRepository = userRepository;
         this.passwordEncoder = passwordEncoder;
         this.jwtTokenizer = jwtTokenizer;
@@ -70,6 +75,7 @@ public class CustomUserDetailService implements UserService {
         this.customerRepository = customerRepository;
         this.staffRepository = staffRepository;
         this.validator = validator;
+        this.permissionService = permissionService;
         this.repositoryMap = Map.of(
             UserType.CUSTOMER, customerRepository,
             UserType.STAFF, staffRepository
@@ -83,10 +89,7 @@ public class CustomUserDetailService implements UserService {
         try {
             ApplicationUser applicationUser = findApplicationUserByEmail(email);
 
-            List<String> authorityStrings = Stream.concat(
-                applicationUser.getRoles().stream().map(Role::getName),
-                applicationUser.getDirectPermissions().stream().map(Permission::getName)
-            ).collect(Collectors.toList());
+            List<String> authorityStrings = permissionService.getEffectivePermissions(applicationUser).stream().toList();
 
             String[] authoritiesArray = authorityStrings.toArray(new String[0]);
             List<GrantedAuthority> grantedAuthorities = AuthorityUtils.createAuthorityList(authoritiesArray);
@@ -113,11 +116,10 @@ public class CustomUserDetailService implements UserService {
             && userDetails.isCredentialsNonExpired()
             && passwordEncoder.matches(userLoginDto.getPassword(), userDetails.getPassword())
         ) {
-            List<String> roles = userDetails.getAuthorities()
-                .stream()
-                .map(GrantedAuthority::getAuthority)
-                .toList();
-            return jwtTokenizer.getAuthToken(userDetails.getUsername(), roles);
+            ApplicationUser user = userRepository.findUserByEmail(userLoginDto.getEmail()).orElseThrow(() -> new NotFoundException("user for login not found"));
+            List<String> permissions = permissionService.getEffectivePermissions(user).stream().toList();
+
+            return jwtTokenizer.getAuthToken(userDetails.getUsername(), user.getId(), permissions);
         }
         throw new BadCredentialsException("Username or password is incorrect or account is locked");
     }
@@ -153,6 +155,8 @@ public class CustomUserDetailService implements UserService {
         validator.userUpdateDtoValidator(updateDto);
         validator.idTester(id);
 
+        checkUserAccessPermission(id);
+
         ApplicationUser existingUser = userRepository.findById(id)
             .orElseThrow(() -> new NotFoundException("User with ID " + id + " was not found."));
 
@@ -174,6 +178,8 @@ public class CustomUserDetailService implements UserService {
 
         validator.idTester(userId);
 
+        checkUserAccessPermission(userId);
+
         ApplicationUser user = userRepository.findById(userId)
             .orElseThrow(() -> new NotFoundException(String.format("Could not find user with id %d", userId)));
 
@@ -190,11 +196,56 @@ public class CustomUserDetailService implements UserService {
 
         validator.idTester(id);
 
+        checkUserAccessPermission(id);
+
         ApplicationUser user = userRepository.findById(id)
             .orElseThrow(() ->
                 new NotFoundException("User with ID " + id + " was not found.")
             );
 
         return mapper.entityToSearchResponseDto(user);
+    }
+
+
+
+    //Helper Methods:
+    //Gets the current user's ID from the security context.
+    private Long getCurrentUserId() {
+        var auth = SecurityContextHolder.getContext().getAuthentication();
+        if (auth == null) {
+            return -1L;
+        }
+
+        // Try to get from details first (set by JwtAuthorizationFilter)
+        Object details = auth.getDetails();
+        if (details instanceof Long) {
+            return (Long) details;
+        }
+
+        // Fallback to AppUserDetails if available
+        Object principal = auth.getPrincipal();
+        if (principal instanceof AppUserDetails) {
+            return ((AppUserDetails) principal).getUserId();
+        }
+
+        return -1L;
+    }
+
+    //Checks if the given id in a DTO is the same ID as the ID of the user who wants to perform a CRUD action
+    private void checkUserAccessPermission(Long requestedUserId) {
+        Long currentUserId = getCurrentUserId();
+
+        // Erlaubt: eigene ID ODER User hat "USER_ADMIN" Permission
+        boolean isOwnUser = Objects.equals(currentUserId, requestedUserId);
+        boolean hasAdminPermission = SecurityContextHolder.getContext().getAuthentication()
+            .getAuthorities()
+            .stream()
+            .anyMatch(a -> a.getAuthority().equals("USER_ADMIN"));
+
+        if (!isOwnUser && !hasAdminPermission) {
+            throw new AccessDeniedException(
+                String.format("User %d is not authorized to access user %d", currentUserId, requestedUserId)
+            );
+        }
     }
 }
